--- a/src/styles.css
+++ b/src/styles.css
@@ -862,26 +862,26 @@ body {
     transform: scale(1.1) translateY(1px); /* Slight enlargement and upward movement */
 }
 
-.misc-gal {
+.misc-gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     margin-top: 30px; /* Space between header and images */
   }
   
-  .misc-gal h2 {
+  .misc-gallery h2 {
     text-align: center;
     font-size: 1.8rem;
     margin-bottom: 20px; /* Ensure spacing between header and images */
   }
   
-  .misc-gal img {
+  .misc-gallery img {
     width: 100%;
     height: auto;
     object-fit: cover;
     border-radius: 5px;
-    max-height: 400px; /* Matches the size of images in other galleries */
   }
+  
   
   
   
